# OrdCP

./: .gitignore  Main_CP_Train.py  Main_CV.py  README.md  pyproject.toml  run_scripts.py  run_scripts_CP.py  test.py
MondrianCP/: MCP_implementation.ipynb
Results/log/: Mobilenet_EUV-304_freezeFalse_20102024_train134_test2_lr3.4_decayval0.npy  Mobilenet_EUV-304_freezeFalse_20102024_train234_test1_lr2.4_decayval0.npy  Mobilenet_EUV-304_freezeFalse_20102024_train234_test1_lr3.0_decayval0.npy  Mobilenet_EUV-304_freezeFalse_20102024_train234_test1_lr3.2_decayval0.npy  Mobilenet_EUV-304_freezeFalse_20102024_train234_test1_lr3.4_decayval0.npy  Mobilenet_EUV-304_freezeFalse_20102024_train234_test1_lr3.7_decayval0.npy
analysis/: CV_result.ipynb  model_result.ods
scripts/: MCP_implementation.ipynb
scripts/models/: Alexnet.py  MobileNet.py  ResNet18.py  ResNet34.py  ResNet50.py  __init__.py
scripts/training/: Dataloader.py  Measurements.py  Sampling.py  TrainTest_loop.py  __init__.py  loss_fn.py
