[tool.poetry]
name = "ordcp"
version = "0.1.0"
description = "Implementation of conformal prediction with ordinal regression."
authors = ["Jinsu Hong <jhong36@student.gsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
